Added new file and a few sentences to Git Tutorial.

--- a/GitTutorial.tex
+++ b/GitTutorial.tex
@@ -22,7 +22,10 @@ This document covers Git Workflow
 \end{abstract}
 
 \section{Introduction}
-    In this tutorial, I will cover local git configuration and basic workflow. If you don't already have an account, please begin by creating one through the  \href{https://www.github.com}{github website}. By the end of the tutorial, you will understand the following:
+    In this tutorial, I will cover local git configuration and basic workflow.
+	If you don't already have an account, please begin by creating one through
+	the  \href{https://www.github.com}{github website}. By the end of the
+	tutorial, you will understand the following:
     \subsection{Local Configuration}
     \begin{itemize}
         \item Configuring Git on Your Local System
@@ -46,8 +49,14 @@ This document covers Git Workflow
     \end{itemize}
 
 \section{Git Install}
-Start by installing Git on your local computer if you haven't already. The github installation guide is found 
+Start by installing Git on your local computer if you haven't already.
+The github installation guide is  
  \href{https://github.com/git-guides/install-git}{here}.
+ 
+ \subsection{Initialize Environment}
+After installation completes, you can set up your local environment.
+Open the terminal by typing "cmd" in the search field. If Git installed
+successfully, you should be able to
 
 
 
